# spatial-data-migration

./: README.md  start.txt
spatial-data-migration/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  script_name.py  setup.cfg
spatial-data-migration/docs/: architecture.md  deployment.md  development.md
spatial-data-migration/examples/: advanced_migration.py  athena-connection-test.py  aws-user-info.py  aws_permissions_check.py  basic_migration.py  migrate-comisarias-full.py  migrate-comisarias.py  migrate-comunas.py  migrate-limite-barrios.py  migrate_barrios.py  migrate_spatial_data.py  migrate_spatial_data_cuadrantes.py  migration.py  specific-s3-check.py  test_postgres_connection.py
spatial-data-migration/scripts/: setup_aws.sh  setup_database.sh
spatial-data-migration/src/spatial_migration/: config.py  logger.py  main.py
spatial-data-migration/src/spatial_migration/core/: __init__.py  extractor.py  loader.py  transformer.py
spatial-data-migration/src/spatial_migration/exceptions/: __init__.py  custom_exceptions.py
spatial-data-migration/src/spatial_migration/models/: __init__.py  schemas.py
spatial-data-migration/src/spatial_migration/utils/: aws.py  db.py  validators.py
spatial-data-migration/tests/: conftest.py  test_extractor.py  test_loader.py  test_transformer.py
useProject/: config-files.txt  core-components.py  core-files.py  create_project_structure.py  documentation-files.txt  example-files.py  project-structure.txt  readme-content.txt  test-files.py  utils-exceptions.py
